--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
                                     <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/groups/neurofriendsgroup" target="_blank">Community</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                                    <li class="nav-item"><a class="nav-link nav-donate-link btn-donate" href="contact.html">Donate</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -108,10 +109,9 @@
         </div>
     </section>
 
-    <div class="scroll-wrapper">
+    <!-- <div class="scroll-wrapper">
     <div class="cover-container">
         <div class="cover-track">
-        <!-- Original items -->
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
@@ -123,7 +123,6 @@
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
         
-        <!-- Duplicate items for seamless looping -->
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
@@ -136,9 +135,9 @@
         <div class="cover-item" style="background-image: url('https://placehold.co/300')"></div>
         </div>
     </div>
-    </div>
+    </div> -->
 
-    <section class="neuro-section">
+    <!-- <section class="neuro-section">
         <div class="container">
 
             <div class="row mt-4">
@@ -149,7 +148,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="dates" class="neuro-section">
         <div class="container text-center">
