--- a/venue.html
+++ b/venue.html
@@ -54,11 +54,9 @@
                                             Games
                                         </a>
                                         <ul class="dropdown-menu" aria-labelledby="gamesDropdown">
-                                            <li><a class="dropdown-item" href="#">Action Games</a></li>
-                                            <li><a class="dropdown-item" href="#">Puzzle Games</a></li>
-                                            <li><a class="dropdown-item" href="#">Sports Games</a></li>
-                                            <li><hr class="dropdown-divider"></li>
-                                            <li><a class="dropdown-item" href="#">All Games</a></li>
+                                            <li><a class="dropdown-item" href="neurohammer.html">NeuroHammer</a></li>
+                                            <li><a class="dropdown-item" href="#">Board Games</a></li>
+                                            <li><a class="dropdown-item" href="#">Jigsaws</a></li>                                            
                                         </ul>
                                     </li>
 
