--- a/venue.html
+++ b/venue.html
@@ -7,16 +7,15 @@
     <meta name="description" content="NeuroFriends is a peer to peer safe space for all neurodivergent people." />    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="canonical" href="https://neurofriends.net/venue">
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />    
     <script>
         document.addEventListener("DOMContentLoaded", function () {
             const email = "facilitators" + "@" + "neurofriends.net";
@@ -52,9 +51,20 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="facilitators.html">Facilitators</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="community-rules.html">Community Rules</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="venue.html">Venue</a></li>
+                                    
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle" href="#" id="aboutDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            About
+                                        </a>
+                                        <ul class="dropdown-menu" aria-labelledby="aboutDropdown">
+                                            <li><a class="dropdown-item" href="./about.html">About Us</a></li>
+                                            <li><a class="dropdown-item" href="./team.html">Meet The Team</a></li>
+                                            <li><a class="dropdown-item" href="./community-rules.html">Community Rules</a></li>
+                                            <li><a class="dropdown-item" href="./venue.html">Venue</a></li>                                                                      
+                                        </ul>
+                                    </li>
+
+                                    <li class="nav-item"><a class="nav-link" href="policies.html">Policies</a></li>
 
                                     <li class="nav-item dropdown">
                                         <a class="nav-link dropdown-toggle" href="#" id="gamesDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -80,7 +90,7 @@
         </div>
     </header>
 <main>
-    <div class="container">
+    <div class="container mt-4 mb-4">
         <h2>Venue</h2>
         <p>Below you can the venue we use for NeuroFriends, this is to give you an idea of what the environment will look and feel like before you attend a session.</p>
     </div>
@@ -237,8 +247,8 @@
                 <h5>About Us</h5>
 
                 <ul class="list-unstyled">
-                    <li><a href="/contact" class="btn btn-primary">Facilitators</a></li>
-                    <li><a href="/contact" class="btn btn-primary mt-2">Feedback</a></li>
+                    <li><a href="/team.html" class="btn btn-primary">Our Team</a></li>
+                    <li><a class="facilitators-email btn btn-primary mt-2" href="#">Feedback</a></li>
                 </ul>
                 
             </div>
@@ -293,7 +303,8 @@
 </div>
 
 
-<script src="/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="></script>
+<script src="./js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
 
 </body>
