--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <ul class="nav me-auto" role="navigation">
                             <li class="nav-item text-center logo">                                
                                     <img class="pt-2 pb-2"
-                                        src="img/logo.webp"
+                                        src="img/logo.png"
                                         alt="NeuroFriends - Home" />                                
                             </li>
                         </ul>
@@ -174,13 +174,13 @@
         <div class="container text-center">
             <h2>Upcoming Meetings</h2>
             <div class="card-container">
-                <div class="card neuro-card">
+                <!-- <div class="card neuro-card">
                     <div class="card-body text-white">
                         <h2 class="card-title">April 27, 2025</h2>
                         <p class="card-text"><span class="fw-bold">Location:</span> <a href="venue.html">Oswestry Senior Citizen Club</a></p>
                         <p class="card-text"><span class="fw-bold">Time:</span> 11am - 12:00pm</p>
                     </div>
-                </div>  
+                </div>   -->
                 <div class="card-container">
                     <div class="card neuro-card">
                         <div class="card-body text-white">
@@ -252,6 +252,75 @@
                             <p class="card-text"><span class="fw-bold">Time:</span> 11am - 12:00pm</p>
                         </div>
                     </div>  
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- <section class="neuro-section">
+        <div class="container text-center">
+            <h2>Stay In The Know</h2>
+            <p>Subscribe to our newsletter to stay up to date with all upcoming meeting dates.</p>
+            <iframe width="540" height="540" src="https://sibforms.com/serve/MUIFACIHLTT2WxlyA_TtfLs4PMKAADh4NaY5v3AwAZc21Gx7Izt00tD29MHoJyYpTESB8dj965JPZsG-VZ4I7g_PonY-oFCqpzAOYmN-ILpP-14lTS_gkv1-LJHToDP0q6Y9d_jXUwerUlEHgYf_7N0ScIumso_b7TMNVTZndTGKOGLnGopJJagaaWM-KOk3MTaKnL2iVfpne-fY" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
+            </h2>
+        </div>
+    </section> -->
+
+    <section id="contact" class="neuro-section">
+        <div class="container text-center">
+            <h2>What's On</h2>
+            <div class="row mt-4">
+                <div class="col-md-6 mb-4">
+                    <div class="card neuro-card">
+                        <div class="card-body text-white">
+                            <h2 class="card-title">Various Games & Jigsaws</h2>
+                            <p class="card-text">
+                                Various board games and Jigsaws depending on your interest.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card neuro-card">
+                        <div class="card-body text-white">
+                            <h2 class="card-title">Craft Space</h2>
+                            <p class="card-text">
+                                A selection of crafting supplies.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card neuro-card">
+                        <div class="card-body text-white">
+                            <h2 class="card-title">NeuroHammer</h2>
+                            <p class="card-text">
+                                Warhammer 40k models for you to build and paint.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="card neuro-card">
+                        <div class="card-body text-white">
+                            <h2 class="card-title">Lego Corner</h2>
+                            <p class="card-text">
+                                A large selection of lego.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12 mb-4">
+                    <div class="card neuro-card">
+                        <div class="card-body text-white">
+                            <h2 class="card-title">So Much More...</h2>
+                            <p class="card-text">
+                                We are adding activities all the time, if there is something you are interested in but don't see it at a session, reach out to a facilitator. You are also more than welcome to bring your own activity to NeuroFriends sessions.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
