--- a/policies/safeguarding.html
+++ b/policies/safeguarding.html
@@ -41,7 +41,7 @@
                             <li class="nav-item text-center logo">
                                
                                     <img class="pt-2 pb-2"
-                                        src="../img/logo.webp"
+                                        src="../img/logo.png"
                                         alt="NeuroFriends - Home" />
                                
                             </li>
