--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
                         <ul class="nav me-auto" role="navigation">
                             <li class="nav-item text-center logo">                               
                                     <img class="pt-2 pb-2"
-                                        src="img/logo.webp"
+                                        src="img/logo.png"
                                         alt="NeuroFriends - Home" />                              
                             </li>
                         </ul>
